styles/style.css
/* ... */
html {
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
	word-break: break-word;
}

.mdl2-icon {
	font-family: 'micon_nb', sans-serif;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	margin: 0;
}

#details h1 {
	line-height: normal;
	font-weight: 700;
	font-size: 4rem;
	margin-left: -.08em;
	/* HACK: Remove left side bearing */
}

#details p {
	color: rgba(var(--primary-color-invert), 0.75);
}

a,
a:hover {
	color: unset;
	text-decoration: none;
	-webkit-user-drag: none;
    cursor: default;
    outline: none;
}


/* Dummy Flyouts */

.hero #preview {
	margin-right: 72px;
	max-width: 100%;
}

.flyout {
	-webkit-user-select: none;
	   -moz-user-select: none;
	    -ms-user-select: none;
	        user-select: none;
	width: 380px;
	max-width: 100%;
	display: block;
	background-color: var(--flyout-background);
	border-radius: 8px;
	-webkit-box-shadow: 0 2.74416px 2.74416px rgba(0, 0, 0, .0274351), 0 5.48831px 5.48831px rgba(0, 0, 0, .0400741), 0 13.7208px 10.9766px rgba(0, 0, 0, .0499982), 0 20.5812px 20.5812px rgba(0, 0, 0, .0596004), 0 41.1623px 41.1623px rgba(0, 0, 0, .0709366), 0 96.0454px 89.1851px rgba(0, 0, 0, .09);
	        box-shadow: 0 2.74416px 2.74416px rgba(0, 0, 0, .0274351), 0 5.48831px 5.48831px rgba(0, 0, 0, .0400741), 0 13.7208px 10.9766px rgba(0, 0, 0, .0499982), 0 20.5812px 20.5812px rgba(0, 0, 0, .0596004), 0 41.1623px 41.1623px rgba(0, 0, 0, .0709366), 0 96.0454px 89.1851px rgba(0, 0, 0, .09);
    -webkit-transform-style: preserve-3d;
            transform-style: preserve-3d;
    transition: 150ms ease transform;
    backface-visibility: hidden;
}

.flyout .flyout-main {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	height: 48px;
    -webkit-transition: 250ms ease transform;
    -o-transition: 250ms ease transform;
    transition: 250ms ease transform;
    backface-visibility: hidden;
}

.flyout:hover .flyout-main {
    -webkit-transform:translateZ(15px);
            transform:translateZ(15px);
}

.flyout .mute-button {
	border: none;
	padding: 0;
	border-radius: 8px;
	background-color: transparent;
	color: rgba(var(--primary-color-invert), 1);
	font-size: 16px;
	font-weight: 400;
}

html.darkmode .flyout .mute-button:hover {
	background-color: rgba(var(--primary-color-invert), 0.29);
    border: 1px solid rgba(var(--primary-color-invert), 0.29);
}

.flyout .mute-button:hover:not(:active) {
    background-color: rgba(var(--primary-color-invert), 0.15);
}

html.darkmode .flyout .mute-button:active {
	background-color: rgba(var(--primary-color-invert), 0.32);
    border: none;
}

.flyout .mute-button:active {
    background-color: rgba(var(--primary-color-invert), 0.1);
}

html.darkmode .flyout .mute-button:focus {
	outline: none;
}

.flyout .slider {
	-webkit-box-flex: 1;
	    -ms-flex: 1 1 auto;
	        flex: 1 1 auto;
	margin: 0 10px;
}

.flyout .volume,
.flyout .mute-button {
	height: 100%;
	width: 48px;
	-webkit-box-flex: 0;
	    -ms-flex: 0 0 auto;
	        flex: 0 0 auto;
}

.flyout .volume {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	color: rgba(var(--primary-color-invert), 1);
	font-size: 20px;
	font-weight: 400;
	line-height: normal;
}


/* Flyout Media */

.flyout-media {
    border-radius: 8px;
	padding: 16px;
	display: block;
    -webkit-transition: 250ms ease transform;
    -o-transition: 250ms ease transform;
    transition: 250ms ease transform;
    backface-visibility: hidden;
}

.flyout:hover .flyout-media {
    -webkit-transform:translateZ(15px);
            transform:translateZ(15px);
}

.media-inner {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	-webkit-box-pack: justify;
	    -ms-flex-pack: justify;
	        justify-content: space-between;
}

.media-info {
    display: block;
    position: relative;
    min-width: 0;
	-webkit-box-flex: 1;
	    -ms-flex: 1 1 auto;
	        flex: 1 1 auto;
}

.media-info h5 {
	color: rgba(var(--primary-color-invert), 1);
	font-size: 14px;
	line-height: normal;
	font-weight: 600;
	max-width: 100%;
	white-space: nowrap;
	overflow: hidden;
	-o-text-overflow: ellipsis;
	   text-overflow: ellipsis;
}

.media-info p {
    margin: 0;
    font-size: 13px;
    font-weight: 400;
    color: rgba(var(--primary-color-invert), 1);
    max-width: 100%;
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.media-inner .media-thumbnail {
	-webkit-box-flex: 0;
	    -ms-flex: 0 0 auto;
	        flex: 0 0 auto;
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
	width: 64px;
	height: 64px;
	margin-left: 16px;
	border-radius: 10px;
	background-color: rgba(var(--primary-color-invert), .07);
	color: rgba(var(--primary-color-invert), 1);
	font-size: 36px;
	font-weight: 500;
}

.media-controls {
	margin-top: 5px;
	position: relative;
}

.media-controls,
.media-controls .controls-inner {
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	-webkit-box-align: center;
	    -ms-flex-align: center;
	        align-items: center;
	-webkit-box-pack: center;
	    -ms-flex-pack: center;
	        justify-content: center;
}
/* ... */

